# ChangeLog for app-portage/udept
# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-portage/udept/Attic/ChangeLog,v 1.8 2006/11/01 19:32:35 fuzzyray Exp $

*udept-0.5.99.0.2.95-r1 (01 Nov 2006)

  01 Nov 2006; Paul Varner <fuzzyray@gentoo.org>
  +files/udept.default-use.patch, +udept-0.5.99.0.2.95-r1.ebuild:
  Revision bump to fix "Unknown USE component" errors

  22 Oct 2006; Michael Hanselmann <hansmi@gentoo.org>
  udept-0.5.99.0.2.95.ebuild:
  Added to ~sparc. Tested by Frank Schmitt.

*udept-0.5.99.0.2.95 (30 Aug 2006)

  30 Aug 2006; Paul Varner <fuzzyray@gentoo.org> -udept-0.5.95.2-r1.ebuild,
  +udept-0.5.99.0.2.95.ebuild:
  Version bump and remove older 0.5.95.2 version.

  15 Aug 2006; Stephanie Lockwood-Childs <wormo@gentoo.org>
  udept-0.5.96.2.ebuild:
  mark ~ppc (Bug #143609)

  15 Aug 2006; Daniel Gryniewicz <dang@gentoo.org> udept-0.5.96.2.ebuild:
  Marked ~amd64

  12 Aug 2006; Paul Varner <fuzzyray@gentoo.org> udept-0.5.95.2-r1.ebuild,
  udept-0.5.96.2.ebuild:
  Remove misspelled and unneeded pgk_postinst function.

*udept-0.5.96.2 (12 Aug 2006)

  12 Aug 2006; Paul Varner <fuzzyray@gentoo.org>
  +files/bash-completion-install.diff, +udept-0.5.96.2.ebuild:
  Version bump. Thanks to genstef (Stefan Schweizer) for the Makefile patch.

*udept-0.5.95.2-r1 (11 Aug 2006)

  11 Aug 2006; Paul Varner <fuzzyray@gentoo.org> +metadata.xml,
  +udept-0.5.95.2-r1.ebuild:
  Adding udept-0.5.95.2-r1 to the tree.
  Thanks to Ed Catmur for the software package and intial ebuild,
  Patrick Zimmermann for Bug #129813 and David Shakaryan for the
  ebuild submission to the Sunrise overlay.
