@@ -1,6 +1,6 @@
-# Copyright 1999-2006 Gentoo Foundation
+# Copyright 1999-2007 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/app-portage/udept/Attic/udept-0.5.96.2.ebuild,v 1.4 2006/08/15 21:26:10 wormo Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-portage/udept/Attic/udept-0.5.96.2.ebuild,v 1.5 2007/06/02 03:22:21 kumba Exp $
 
 inherit bash-completion eutils
 
@@ -10,7 +10,7 @@ SRC_URI="http://files.catmur.co.uk/${PN}/${P}.tar.bz2"
 
 LICENSE="GPL-2"
 SLOT="0"
-KEYWORDS="~amd64 ~ppc ~x86"
+KEYWORDS="~amd64 ~mips ~ppc ~x86"
 IUSE=""
 
 DEPEND="app-shells/bash
